samples/seldon/quickstart/baseline.yaml
apiVersion: v1
kind: Namespace
metadata:
    name: ns-baseline
