samples/seldon/quickstart/candidate.yaml
apiVersion: v1
kind: Namespace
metadata:
    name: ns-candidate
