samples/seldon/quickstart/metrics.yaml
apiVersion: v1
kind: Namespace
metadata:
  name: iter8-seldon
