samples/seldon/quickstart/routing-rule.yaml
apiVersion: networking.istio.io/v1alpha3
kind: VirtualService
metadata:
  name: routing-rule
  namespace: default
spec:
  gateways:
  - istio-system/seldon-gateway
  hosts:
  - example.com
  http:
  - route:
    - destination:
        host: mock1-default.ns-baseline.svc.cluster.local
        port:
          number: 8000
      headers:
        request:
          set:
            Host: mock1-default
        response:
          set:
            version: mock-v1
      weight: 50
    - destination:
        host: mock2-default.ns-candidate.svc.cluster.local
        port:
          number: 8000
      headers:
        request:
          set:
            Host: mock2-default
        response:
          set:
            version: mock-v2
      weight: 50
